--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,5 +1,16 @@
 export(DLM)
+export(dlm_GG)
+export(dlm_HG)
+export(dlm_HH)
+export(dlm_Omega)
+export(dlm_Phi)
+export(dlm_Sigma)
+export(dlm_T)
+export(dlm_Z)
 export(dlm_arma)
+export(dlm_cc)
+export(dlm_dd)
+export(dlm_delta)
 export(dlm_polynomial)
 export(dlm_recursion)
 export(dlm_spline)
