--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,10 +9,14 @@ export(dlm_T)
 export(dlm_Z)
 export(dlm_arma)
 export(dlm_cc)
+export(dlm_cyclical)
+export(dlm_cyclical_season)
+export(dlm_cyclical_tau)
 export(dlm_dd)
 export(dlm_delta)
 export(dlm_polynomial)
 export(dlm_recursion)
+export(dlm_reg)
 export(dlm_spline)
 exportClasses(DLM)
 exportMethods("+")
