--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,5 +19,6 @@ export(dlm_recursion)
 export(dlm_reg)
 export(dlm_spline)
 exportClasses(DLM)
+exportClasses(DlmSamples)
 exportMethods("+")
 import(mvtnorm)
