rewrite to use Matrix package

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,11 +14,16 @@ export(dlm_cyclical_season)
 export(dlm_cyclical_tau)
 export(dlm_dd)
 export(dlm_delta)
+export(dlm_obs)
 export(dlm_polynomial)
 export(dlm_recursion)
 export(dlm_reg)
+export(dlm_seasonal)
 export(dlm_spline)
+export(dlm_states)
+export(dlm_vars)
 exportClasses(DLM)
 exportClasses(DlmSamples)
 exportMethods("+")
+import(Matrix)
 import(mvtnorm)
