--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,6 +10,7 @@ Description: Functions and classes for dynamic linear models and
 Depends:
     methods
 Imports:
+    Matrix,
     mvtnorm
 Suggests:
     testthat,
@@ -22,7 +23,6 @@ Collate:
     'DlmSamples-class.R'
     'dlm_recursion.R'
     'add-method.R'
-    'bdiag.R'
     'dlm_arma.R'
     'dlm_seasonal.R'
     'dlm_spline.R'
