--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,8 +22,10 @@ export(dlm_seasonal)
 export(dlm_spline)
 export(dlm_states)
 export(dlm_vars)
+export(kalman_filter)
 exportClasses(DLM)
 exportClasses(DlmSamples)
+exportClasses(KalmanFilter)
 exportMethods("+")
 import(Matrix)
 import(mvtnorm)
