--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,8 +23,12 @@ export(dlm_spline)
 export(dlm_states)
 export(dlm_vars)
 export(kalman_filter)
+export(kalman_filter2)
+export(kalman_filter_seq)
 exportClasses(DLM)
 exportClasses(DlmSamples)
 exportClasses(KalmanFilter)
+exportClasses(KalmanFilterBatch)
+exportClasses(KalmanFilterSeq)
 exportMethods("+")
 import(Matrix)
