--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,7 @@ export(dlm_Phi)
 export(dlm_Sigma)
 export(dlm_T)
 export(dlm_Z)
-export(dlm_arma)
+export(dlm_arima)
 export(dlm_cc)
 export(dlm_cyclical)
 export(dlm_cyclical_season)
