--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,23 +17,10 @@ Suggests:
     roxygen2
 Collate:
     'yakf-package.R'
-    'DLM-class.R'
-    'dlm_polynomial.R'
-    'DlmSamples-class.R'
-    'dlm_recursion.R'
-    'add-method.R'
-    'dlm_seasonal.R'
-    'dlm_spline.R'
-    'dlm-accessors.R'
-    'dlm_reg.R'
     'utilities.R'
-    'dlm_cyclical.R'
-    'KalmanFilter-class.R'
-    'kalman_filter.R'
-    'KalmanFilterSeq-class.R'
-    'kalman_filter_seq.R'
-    'KalmanFilterBatch-class.R'
-    'kalman_filter2.R'
-    'kalman_smooth_seq.R'
-    'dlm_arma.R'
+    'MatrixList-class.R'
+    'Ops-methods.R'
+    'MatrixOrMatrixList-class.R'
+    'SSM-class.R'
+    'bd-method.R'
 VignetteBuilder: knitr
