--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,34 +1,5 @@
-export(DLM)
-export(dlm_GG)
-export(dlm_HG)
-export(dlm_HH)
-export(dlm_Omega)
-export(dlm_Phi)
-export(dlm_Sigma)
-export(dlm_T)
-export(dlm_Z)
-export(dlm_arima)
-export(dlm_cc)
-export(dlm_cyclical)
-export(dlm_cyclical_season)
-export(dlm_cyclical_tau)
-export(dlm_dd)
-export(dlm_delta)
-export(dlm_obs)
-export(dlm_polynomial)
-export(dlm_recursion)
-export(dlm_reg)
-export(dlm_seasonal)
-export(dlm_spline)
-export(dlm_states)
-export(dlm_vars)
-export(kalman_filter)
-export(kalman_filter2)
-export(kalman_filter_seq)
-exportClasses(DLM)
-exportClasses(DlmSamples)
-exportClasses(KalmanFilter)
-exportClasses(KalmanFilterBatch)
-exportClasses(KalmanFilterSeq)
-exportMethods("+")
+export(SSM)
+exportClasses(MatrixList)
+exportClasses(SSM)
+exportMethods(Ops)
 import(Matrix)
