--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,4 +2,7 @@ export(SSM)
 exportClasses(MatrixList)
 exportClasses(SSM)
 exportMethods(Ops)
+exportMethods(cbind2)
+exportMethods(dim)
+exportMethods(rbind2)
 import(Matrix)
