--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,6 +1,11 @@
+export(MatrixList)
 export(SSM)
+export(ssm_samples)
 exportClasses(MatrixList)
 exportClasses(SSM)
+exportClasses(SsmSamples)
+exportMethods("%bd%")
+exportMethods("+")
 exportMethods(Ops)
 exportMethods(cbind2)
 exportMethods(dim)
